<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:background="@drawable/bg"
    android:padding="@dimen/_10sdp">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="@dimen/_20ssp"
        android:textStyle="bold"
        android:text="@string/forgotpass_txt"
        android:textColor="@color/tab_indicator"
        android:layout_marginTop="@dimen/_10sdp"
        />

    <EditText
        android:id="@+id/email_edtxt"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/email"
        android:layout_marginTop="@dimen/_10sdp"
        android:padding="@dimen/_5sdp"
        android:inputType="textEmailAddress"
        />

    <EditText
        android:id="@+id/otp_edtxt"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/otp_entry"
        android:layout_marginTop="@dimen/_10sdp"
        android:padding="@dimen/_5sdp"
        android:inputType="number"
        />

    <EditText
        android:id="@+id/password_edtxt"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/password"
        android:layout_marginTop="@dimen/_10sdp"
        android:padding="@dimen/_5sdp"
        android:inputType="textPassword"
        />

    <EditText
        android:id="@+id/confirmpass_edtxt"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/confirm_password"
        android:layout_marginTop="@dimen/_10sdp"
        android:padding="@dimen/_5sdp"
        android:inputType="textPassword"
        />

    <Button
        android:id="@+id/reset_btn"
        android:layout_width="@dimen/_100sdp"
        android:layout_height="wrap_content"
        android:background="@drawable/round_button"
        android:text="@string/submit_title"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:layout_marginTop="@dimen/_20sdp"
        />

</LinearLayout>