<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@drawable/bg"
    android:padding="@dimen/_10sdp">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="@dimen/_30ssp"
        android:textStyle="bold"
        android:text="@string/forgotpass_txt"
        android:textColor="@color/tab_indicator"
        android:layout_marginTop="@dimen/_10sdp"
        />

    <EditText
        android:id="@+id/email_edtxt"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/email"
        android:drawableEnd="@drawable/email_icon"
        android:drawablePadding="@dimen/_10sdp"
        android:layout_marginTop="@dimen/_10sdp"
        android:padding="@dimen/_5sdp"
        android:inputType="textEmailAddress"
        />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="@dimen/_12ssp"
        android:textStyle="bold"
        android:text="@string/forgot_pass_txt"
        android:textColor="@color/tab_selected"
        android:layout_marginTop="@dimen/_10sdp"
        />

    <Button
        android:id="@+id/submit_btn"
        android:layout_width="@dimen/_100sdp"
        android:layout_height="wrap_content"
        android:background="@drawable/round_button"
        android:text="@string/submit_title"
        android:textAllCaps="false"
        android:layout_gravity="center_horizontal"
        android:textColor="@color/white"
        android:layout_marginTop="@dimen/_20sdp"
        />

</LinearLayout>