<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="@dimen/_10sdp"
    android:layout_margin="@dimen/_5sdp">

    <TextView
        android:id="@+id/txt_file_path"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:gravity="center_horizontal"
        android:text="@string/app_name"
        android:textColor="#000000"
        android:textSize="@dimen/_17ssp"
        android:textStyle="bold" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/enter_otp"
        android:textColor="#ff000000"
        android:textSize="@dimen/_15ssp"
        android:layout_marginTop="@dimen/_10sdp"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/otp_editTxt"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="@dimen/_5sdp"
        android:inputType="number"
        android:layout_marginTop="@dimen/_10sdp"
        android:background="@drawable/rectangle_border_bg"
        android:hint="@string/otp_entry"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:layout_marginTop="@dimen/_10sdp"
        android:weightSum="2">

            <Button
                android:id="@+id/btn_resend"
                android:layout_width="0dp"
                android:layout_height="@dimen/_25sdp"
                android:layout_weight="1"
                android:background="@drawable/round_button"
                android:gravity="center"
                android:text="@string/resend_otp"
                android:textColor="#ffffffff"
                android:textSize="@dimen/_13ssp"
                android:layout_marginEnd="@dimen/_5sdp"
                android:textStyle="bold" />


            <Button
                android:id="@+id/btn_submit"
                android:layout_width="0dp"
                android:layout_height="@dimen/_25sdp"
                android:layout_weight="1"
                android:background="@drawable/round_button"
                android:text="@string/send_btn"
                android:textColor="#ffffffff"
                android:textSize="@dimen/_13ssp"
                android:layout_marginStart="@dimen/_5sdp"
                android:textStyle="bold" />

        </LinearLayout>
    </LinearLayout>