<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:layout_margin="@dimen/_10sdp">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="@dimen/_12ssp"
        android:text="@string/login_text"
        android:layout_marginTop="@dimen/_10sdp"
        />

    <EditText
        android:id="@+id/email_edtxt"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/email"
        android:drawableEnd="@drawable/email_icon"
        android:drawablePadding="@dimen/_10sdp"
        android:layout_marginTop="@dimen/_10sdp"
        android:padding="@dimen/_5sdp"
        android:inputType="textEmailAddress"
        android:background="@drawable/rectangle_border_bg"
        />

    <EditText
        android:id="@+id/pass_edtxt"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/password"
        android:drawableEnd="@drawable/password_icon"
        android:drawablePadding="@dimen/_10sdp"
        android:layout_marginTop="@dimen/_10sdp"
        android:padding="@dimen/_5sdp"
        android:inputType="textPassword"
        android:background="@drawable/rectangle_border_bg"
        />

    <TextView
        android:id="@+id/forgotpass_txt"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="@dimen/_12ssp"
        android:text="@string/forgotpass_txt"
        android:gravity="end"
        android:layout_marginTop="@dimen/_10sdp"
        />

    <Button
        android:id="@+id/login_btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/rounded_button_field"
        android:text="@string/login_title"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:layout_marginTop="@dimen/_10sdp"
        />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_margin="@dimen/_10sdp"
        android:weightSum="3">

    <ImageView
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:src="@drawable/or_line_1"
        android:layout_gravity="center_vertical"/>

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textSize="@dimen/_12ssp"
            android:text="@string/or_txt"
            android:textColor="@color/tab_selected"
            android:gravity="center_horizontal"/>

        <ImageView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:src="@drawable/or_line_1"
            android:layout_gravity="center_vertical"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:weightSum="2">

        <com.facebook.login.widget.LoginButton
            android:id="@+id/login_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="30dp"
            android:layout_marginBottom="30dp"
            android:visibility="gone"/>

        <LinearLayout
            android:id="@+id/facebooklogin_btn"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="horizontal"
            android:padding="@dimen/_5sdp"
            android:gravity="center_horizontal"
            android:layout_margin="@dimen/_5sdp"
            android:background="@drawable/rectangle_border_bg">
            <ImageView
                android:layout_width="@dimen/_20sdp"
                android:layout_height="@dimen/_20sdp"
                android:src="@drawable/facebook_icon"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/login_facebook"
                android:layout_gravity="center_vertical"
                android:textSize="@dimen/_12ssp"
                android:layout_marginStart="@dimen/_10sdp"/>
        </LinearLayout>

        <com.google.android.gms.common.SignInButton
            android:id="@+id/sign_in_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:visibility="gone"/>
        <LinearLayout
            android:id="@+id/googlelogin_btn"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="horizontal"
            android:padding="@dimen/_5sdp"
            android:gravity="center_horizontal"
            android:layout_margin="@dimen/_5sdp"
            android:background="@drawable/rectangle_border_bg">
            <ImageView
                android:layout_width="@dimen/_20sdp"
                android:layout_height="@dimen/_20sdp"
                android:src="@drawable/google_icon"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/login_google"
                android:layout_gravity="center_vertical"
                android:textSize="@dimen/_12ssp"
                android:layout_marginStart="@dimen/_10sdp"/>
        </LinearLayout>

    </LinearLayout>

    <TextView
        android:id="@+id/signupquery_txt"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="@dimen/_12ssp"
        android:text="@string/signup_questxt"
        android:gravity="center_horizontal"
        android:layout_marginTop="@dimen/_10sdp"
        android:textColorLink="@color/tab_indicator"
        />
</LinearLayout>