<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white">
    <ImageView
        android:id="@+id/headerImg"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:src="@drawable/loginlogo"
        />

    <ImageView
        android:id="@+id/realityImg"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/headerImg"
        android:src="@drawable/realty_2020"
        android:layout_centerInParent="true"
        />

    <ImageView
        android:id="@+id/crossImage"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:padding="@dimen/_10sdp"
        android:src="@drawable/cross_icon"/>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/_20sdp"
        android:layout_below="@+id/realityImg">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

    <TextView
        android:id="@+id/profileTxt"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="@dimen/_5sdp"
        android:text="@string/profile_txt"
        android:textColor="@color/white"
        android:background="@drawable/round_button"
        android:gravity="center_vertical"
        android:textSize="@dimen/_12ssp"
        app:drawableStartCompat="@drawable/profile_icon"
        android:drawablePadding="@dimen/_10sdp"/>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/round_button"
            android:layout_marginTop="@dimen/_10sdp"
            android:orientation="horizontal">
        <TextView
            android:id="@+id/soundTxt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="@dimen/_5sdp"
            android:text="@string/sound_txt"
            android:textColor="@color/white"
            android:textSize="@dimen/_12ssp"
            android:layout_alignParentStart="true"
            android:layout_centerVertical="true"
            app:drawableStartCompat="@drawable/sound_icon"
            android:drawablePadding="@dimen/_10sdp"/>

            <Switch
                android:id="@+id/sound_btn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_centerVertical="true"
                android:thumbTint="@color/black"
                android:showText="true"
                android:track="@drawable/switch_track_custom"
                tools:ignore="UseSwitchCompatOrMaterialXml" />
        </RelativeLayout>

        <TextView
            android:id="@+id/feedbackTxt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="@dimen/_5sdp"
            android:layout_marginTop="@dimen/_10sdp"
            android:text="@string/feedback_txt"
            android:textColor="@color/white"
            android:background="@drawable/round_button"
            android:gravity="center_vertical"
            android:textSize="@dimen/_12ssp"
            app:drawableStartCompat="@drawable/feedback_icon"
            android:drawablePadding="@dimen/_10sdp"/>

        <TextView
            android:id="@+id/logoutTxt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="@dimen/_5sdp"
            android:layout_marginTop="@dimen/_10sdp"
            android:text="@string/logout_txt"
            android:textColor="@color/white"
            android:background="@drawable/round_button"
            android:gravity="center_vertical"
            android:textSize="@dimen/_12ssp"
            app:drawableStartCompat="@drawable/logout_icon"
            android:drawablePadding="@dimen/_10sdp"/>

    </LinearLayout>

    </ScrollView>
</RelativeLayout>